--- a/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
+++ b/force-app/main/default/aura/StudyDetailView/StudyDetailView.cmp
@@ -87,114 +87,114 @@
                     </aura:if>
                 </div>
 
-                <!--                <div class="rr-all-content sticky-bar" id="stickyPositionTarget">-->
-<!--                    <c:RRAnchor aura:id="tabsTarget"/>-->
-<!--                    <aura:if isTrue="{!!empty(v.studyDetail.tabs)}">-->
-<!--                        <div class="tabs">-->
-<!--                        <div class="rr-width-limiter">-->
-<!--                                <c:RRTabSet>-->
-<!--                                    &lt;!&ndash; tabs: &ndash;&gt;-->
-<!--                                    <aura:set attribute="floatPositionLeft">-->
-<!--                                        <aura:if isTrue="{!v.userMode != 'HCP'}">-->
-<!--                                            <aura:iteration items="{!v.studyDetail.tabs}" var="tab">-->
-<!--                                                <c:RRTabSetItem tabId="{!tab.id}" currentTab="{!v.currentTab}"-->
-<!--                                                                iconName="{!tab.iconName}" title="{!tab.title}"-->
-<!--                                                                studyId="{!v.studyDetail.trial.Id}"/>-->
-<!--                                            </aura:iteration>-->
-<!--                                        </aura:if>-->
-<!--                                    </aura:set>-->
-<!--                                    &lt;!&ndash; action buttons: &ndash;&gt;-->
-<!--                                    <aura:set attribute="floatPositionRight">-->
-<!--                                        <div class="actions-buttons">-->
-<!--                                            <aura:iteration items="{!v.currentActions}" var="action">-->
-<!--                                                <div style="position: relative;">-->
-<!--                                                    <aura:if isTrue="{!action.id != 'share'}">-->
-<!--                                                        <button class="{!'apollo-btn text ico-in-top small-font sdv-btn'}"-->
-<!--                                                                disabled="{!action.disabled}" id="{!action.id}"-->
-<!--                                                                onclick="{!c.doAction}" title="{!action.disableReason}">-->
-<!--                                                            <c:RRIcon iconName="{!action.iconName}"/>-->
-<!--                                                            {!action.label}-->
-<!--                                                        </button>-->
-<!--                                                    </aura:if>-->
-<!--                                                    <aura:if isTrue="{!and(action.id == 'share',!empty(v.studyDetail.trial.NCT_Number__c))}">-->
-<!--                                                        <div class="share-icons">-->
-<!--                                                            <aura:iteration items="{!v.shareButtons}" var="shareButton">-->
-<!--                                                                <div class="share-ico" id="{!shareButton.id}" onclick="{!c.doAction}">-->
-<!--                                                                    <c:RRIcon iconName="{!shareButton.iconName}"/>-->
-<!--                                                                </div>-->
-<!--                                                            </aura:iteration>-->
-<!--                                                        </div>-->
-<!--                                                    </aura:if>-->
-<!--                                                </div>-->
-<!--                                            </aura:iteration>-->
-<!--                                        </div>-->
-<!--                                    </aura:set>-->
-<!--                                </c:RRTabSet>-->
-<!--                        </div>-->
-<!--                    </div>-->
-<!--                    </aura:if>-->
-<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-about-the-study', '', ' collapsed')}">-->
-<!--                        <button class="apollo-btn text" data-anchor="aboutAnchor"-->
-<!--                                onclick="{!c.doScrollInto}">{!$Label.c.PG_SW_Link_About_The_Study}</button>-->
-<!--                        <button class="apollo-btn text" data-anchor="inclusionExclusionAnchor"-->
-<!--                                onclick="{!c.doScrollInto}">{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</button>-->
-<!--                        &lt;!&ndash; HCP &ndash;&gt;-->
-<!--                        &lt;!&ndash;<aura:if isTrue="{!v.userMode == 'HCP'}">-->
-<!--                            <button class="apollo-btn text" data-anchor="studySitesAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_sites}</button>-->
+                <div class="rr-all-content sticky-bar" id="stickyPositionTarget">
+                    <c:RRAnchor aura:id="tabsTarget"/>
+                    <aura:if isTrue="{!!empty(v.studyDetail.tabs)}">
+                        <div class="tabs">
+                            <div class="rr-width-limiter">
+                                <c:RRTabSet>
+                                    <!-- tabs: -->
+                                    <aura:set attribute="floatPositionLeft">
+                                        <aura:if isTrue="{!v.userMode != 'HCP'}">
+                                            <aura:iteration items="{!v.studyDetail.tabs}" var="tab">
+                                                <c:RRTabSetItem tabId="{!tab.id}" currentTab="{!v.currentTab}"
+                                                                iconName="{!tab.iconName}" title="{!tab.title}"
+                                                                studyId="{!v.studyDetail.trial.Id}"/>
+                                            </aura:iteration>
+                                        </aura:if>
+                                    </aura:set>
+                                    <!-- action buttons: -->
+                                    <aura:set attribute="floatPositionRight">
+                                        <div class="actions-buttons">
+                                            <aura:iteration items="{!v.currentActions}" var="action">
+                                                <div style="position: relative;">
+                                                    <aura:if isTrue="{!action.id != 'share'}">
+                                                        <button class="{!'apollo-btn text ico-in-top small-font sdv-btn'}"
+                                                                disabled="{!action.disabled}" id="{!action.id}"
+                                                                onclick="{!c.doAction}" title="{!action.disableReason}">
+                                                            <c:RRIcon iconName="{!action.iconName}"/>
+                                                            {!action.label}
+                                                        </button>
+                                                    </aura:if>
+                                                    <aura:if isTrue="{!and(action.id == 'share',!empty(v.studyDetail.trial.NCT_Number__c))}">
+                                                        <div class="share-icons">
+                                                            <aura:iteration items="{!v.shareButtons}" var="shareButton">
+                                                                <div class="share-ico" id="{!shareButton.id}" onclick="{!c.doAction}">
+                                                                    <c:RRIcon iconName="{!shareButton.iconName}"/>
+                                                                </div>
+                                                            </aura:iteration>
+                                                        </div>
+                                                    </aura:if>
+                                                </div>
+                                            </aura:iteration>
+                                        </div>
+                                    </aura:set>
+                                </c:RRTabSet>
+                            </div>
+                        </div>
+                    </aura:if>
+                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-about-the-study', '', ' collapsed')}">
+                        <button class="apollo-btn text" data-anchor="aboutAnchor"
+                                onclick="{!c.doScrollInto}">{!$Label.c.PG_SW_Link_About_The_Study}</button>
+                        <button class="apollo-btn text" data-anchor="inclusionExclusionAnchor"
+                                onclick="{!c.doScrollInto}">{!$Label.c.PG_SW_Link_Inclusion_Exclusion_Criteria}</button>
+                        <!-- HCP -->
+                        <!--<aura:if isTrue="{!v.userMode == 'HCP'}">
+                            <button class="apollo-btn text" data-anchor="studySitesAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_sites}</button>
 
-<!--                        </aura:if> -->
-<!--                        <aura:if isTrue="{!v.userMode == 'Participant'}">-->
-<!--                            <button class="apollo-btn text" data-anchor="studySiteAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_site}</button>-->
-<!--                        </aura:if>-->
-<!--                        &lt;!&ndash; PI &ndash;&gt;-->
-<!--                        <aura:if isTrue="{!v.userMode == 'PI'}">-->
-<!--                            <button class="apollo-btn text" data-anchor="referringClinicsAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_DBPI_L_Referring_clinics}</button>-->
-<!--                        </aura:if>-->
-<!--                    </div>-->
+                        </aura:if>
+                        <aura:if isTrue="{!v.userMode == 'Participant'}">
+                            <button class="apollo-btn text" data-anchor="studySiteAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_VP_L_Study_site}</button>
+                        </aura:if>-->
+                        <!-- PI -->
+                        <aura:if isTrue="{!v.userMode == 'PI'}">
+                            <button class="apollo-btn text" data-anchor="referringClinicsAnchor" onclick="{!c.doScrollInto}">{!$Label.c.PG_DBPI_L_Referring_clinics}</button>
+                        </aura:if>
+                    </div>
 
-<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-visits', '', ' collapsed')}">-->
-<!--                        <button id="changeVisitMode" data-visit-mode="Current"-->
-<!--                                class="{!'apollo-btn text ' + if(v.visitMode == 'Current', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Study_Visits}</button>-->
-<!--                        <button id="changeVisitMode" data-visit-mode="Past"-->
-<!--                                class="{!'apollo-btn text ' + if(v.visitMode == 'Past', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Past_Visits}</button>-->
-<!--                    </div>-->
+                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-visits', '', ' collapsed')}">
+                        <button id="changeVisitMode" data-visit-mode="Current"
+                                class="{!'apollo-btn text ' + if(v.visitMode == 'Current', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Study_Visits}</button>
+                        <button id="changeVisitMode" data-visit-mode="Past"
+                                class="{!'apollo-btn text ' + if(v.visitMode == 'Past', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Home_Page_StudyVisit_Tab_Past_Visits}</button>
+                    </div>
 
-<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-tasks', '', ' collapsed')}">-->
-<!--                        <button id="changeTaskMode" data-task-mode="Open" value="Pending"-->
-<!--                                class="{!'apollo-btn text ' + if(v.taskMode == 'Open', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Open_Tasks}</button>-->
-<!--                        <button id="changeTaskMode" data-task-mode="Completed" value="Pending"-->
-<!--                                class="{!'apollo-btn text ' + if(v.taskMode == 'Completed', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Completed_Tasks}</button>-->
-<!--                    </div>-->
+                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-tasks', '', ' collapsed')}">
+                        <button id="changeTaskMode" data-task-mode="Open" value="Pending"
+                                class="{!'apollo-btn text ' + if(v.taskMode == 'Open', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Open_Tasks}</button>
+                        <button id="changeTaskMode" data-task-mode="Completed" value="Pending"
+                                class="{!'apollo-btn text ' + if(v.taskMode == 'Completed', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Task_Tab_Completed_Tasks}</button>
+                    </div>
 
-<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-resources', '', ' collapsed')}">-->
-<!--                        <aura:if isTrue="{!v.state != 'ALUMNI'}">-->
-<!--                            <button id="changeResourceMode" data-resource-mode="Documents"-->
-<!--                                    class="{!'apollo-btn text ' + if(v.resourceMode == 'Documents', ' current', '')}"-->
-<!--                                    onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Documents}</button>-->
-<!--                        </aura:if>-->
-<!--                        <button id="changeResourceMode" data-resource-mode="Default"-->
-<!--                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Default', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Video_And_Articles}</button>-->
-<!--                        <button id="changeResourceMode" data-resource-mode="Favorite"-->
-<!--                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Favorite', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Favorites}</button>-->
-<!--                    </div>-->
+                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-resources', '', ' collapsed')}">
+                        <aura:if isTrue="{!v.state != 'ALUMNI'}">
+                            <button id="changeResourceMode" data-resource-mode="Documents"
+                                    class="{!'apollo-btn text ' + if(v.resourceMode == 'Documents', ' current', '')}"
+                                    onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Documents}</button>
+                        </aura:if>
+                        <button id="changeResourceMode" data-resource-mode="Default"
+                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Default', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Study_Video_And_Articles}</button>
+                        <button id="changeResourceMode" data-resource-mode="Favorite"
+                                class="{!'apollo-btn text ' + if(v.resourceMode == 'Favorite', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Resource_Tab_Favorites}</button>
+                    </div>
 
-<!--                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-lab-results', '', ' collapsed')}">-->
-<!--                        <button id="changeLabResultsMode" data-lab-results-mode="Vitals"-->
-<!--                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Vitals', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Vitals}</button>-->
-<!--                        <button id="changeLabResultsMode" data-lab-results-mode="Labs"-->
-<!--                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Labs', ' current', '')}"-->
-<!--                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Labs}</button>-->
-<!--                    </div>-->
+                    <div class="{!'links rr-width-limiter side-padding' + if(v.currentTab == 'tab-lab-results', '', ' collapsed')}">
+                        <button id="changeLabResultsMode" data-lab-results-mode="Vitals"
+                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Vitals', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Vitals}</button>
+                        <button id="changeLabResultsMode" data-lab-results-mode="Labs"
+                                class="{!'apollo-btn text ' + if(v.labResultsMode == 'Labs', ' current', '')}"
+                                onclick="{!c.doAction}">{!$Label.c.Visit_Results_Tab_Labs}</button>
+                    </div>
 
-<!--                </div>-->
-                <!-- Stub visible only when sticky bar fixed-->
+                </div>
+                Stub visible only when sticky bar fixed
                 <div>
                     <div class="height-stub" style="height: 62px"></div>
                     <aura:if isTrue="{!v.currentTab == 'tab-about-the-study'}">
