--- a/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
+++ b/force-app/main/default/aura/IconPlanetVisitInfoEdit/IconPlanetVisitInfoEdit.cmp
@@ -1,45 +1,127 @@
 <!--
   - Created by Yehor Dobrovolskyi
  -->
-<aura:component description="IconPlanetVisitInfoEdit" extends="c:LightningService" controller="IconPlanetVisitInfoEditRemote">
+<aura:component description="IconPlanetVisitInfoEdit" extends="c:LightningService"
+                controller="IconPlanetVisitInfoEditRemote">
 
-    <aura:attribute name="detailIcons" type="Object"/>
+    <aura:attribute name="detailIcons" type="Object[]"/>
+    <aura:attribute name="customIconDetails" type="Object[]"/>
     <aura:attribute name="visitPlanId" type="Id"/>
-
+    <aura:attribute name="createNewPackage" type="Boolean" default="false"/>
+    <aura:attribute name="iconPackageId" type="Id"/>
+    <aura:attribute name="existingIconsPackage" type="Id"/>
+    <aura:attribute name="packageId" type="Id"/>
+    <aura:attribute name="visitPackageId" type="Id"/>
+    <aura:attribute name="allIcons" type="String[]"/>
+    <aura:attribute name="iconsPackPath" type="String" default="/icons.svg"/>
+    <aura:attribute name="iconsURL" type="String" default="{!$Resource.rr_community_icons + v.iconsPackPath}" access="private"/><aura:attribute name="summaryContainers" type="List" access="private"/>
     <aura:method name="show" action="{!c.show}"/>
     <aura:method name="hide" action="{!c.hide}"/>
     <aura:method name="loadIconsDescription" action="{!c.loadIconsDescription}"/>
 
     <lightning:notificationsLibrary aura:id="notifLib"/>
-
     <c:CustomModal aura:Id='customModal' size="medium">
-        <c:RRTable>
-            <tr>
-                <th>Icon</th>
-                <th class="priority">Icon Label</th>
-                <th class="completed-by">Description</th>
-            </tr>
-            <aura:iteration items="{!v.detailIcons}" var="icon">
-                <tr>
-                    <td>
-                        <div class="icon-title">
-                            <c:RRIcon iconName="{!icon.Name}"/>
+        <lightning:spinner class="slds-hide" aura:Id="spinner" size="medium"/>
+        <lightning:layout verticalAlign="end">
+            <lightning:layoutItem flexibility="auto">
+                <lightning:recordEditForm
+                        aura:id="editFormVisitPackage"
+                        recordId="{!v.packageId}"
+                        objectApiName="VisitPackage__c">
+
+                    <lightning:messages/>
+                    <div class="slds-form-element">
+                        <label class="slds-form-element__label" for="form-element-01">Existing visit legends</label>
+                        <div class="slds-form-element__control">
+                    <span id="form-element-01">
+                     <lightning:inputField disabled="{!empty(v.detailIcons)}" variant="label-hidden" onchange="{!c.onInputChange}" aura:id="nameId"
+                                           fieldName="Icons_package__c"/>
+                    </span>
                         </div>
-                    </td>
-                    <td style="width: 30%">
-                        <lightning:input label="" name="{!icon.label__c}" value="{!icon.Label__c}"/>
-                    </td>
-                    <td>
-                        <lightning:input label="" name="{!icon.description__c}" value="{!icon.Description__c}"/>
-                    </td>
+                    </div>
+                </lightning:recordEditForm>
+            </lightning:layoutItem>
+            <lightning:layoutItem flexibility="auto">
+                <aura:if isTrue="{!empty(v.detailIcons)}">
+                    <lightning:button variant="brand" type="button" name="Create new legend" label="Create new legend"
+                                      onclick="{!c.openLegendCreation}"/>
+                </aura:if>
+            </lightning:layoutItem>
+
+
+        </lightning:layout>
+        <c:CustomModal aura:Id='createLegendModal' size="medium">
+            <lightning:recordEditForm
+                    onload="{!c.preload}"
+                    onsuccess="{!c.handleLegendCreation}"
+                    onerror="{!c.onError}"
+                    aura:id="editFormIcon"
+                    recordId="{!v.iconPackageId}"
+                    objectApiName="Icons_package__c">
+
+                <lightning:messages/>
+                <lightning:inputField aura:id="nameId" fieldName="Name"/>
+            </lightning:recordEditForm>
+            <aura:set attribute="footer">
+                <lightning:button variant="neutral" type="button" name="close" label="close"
+                                  onclick="{!c.cansel}"/>
+                <lightning:button onclick="{!c.submitIcon}" variant="brand" type="button" name="save" label="Save"/>
+            </aura:set>
+        </c:CustomModal>
+        <aura:if isTrue="{!empty(v.detailIcons)==false}">
+            <c:RRTable>
+                <tr>
+                    <th>Icon</th>
+                    <th class="priority">Icon Label</th>
+                    <th class="completed-by">Description</th>
                 </tr>
-            </aura:iteration>
-        </c:RRTable>
+                <aura:iteration items="{!v.detailIcons}" var="icon">
+                    <tr>
+                        <td>
+                            <div class="icon-title">
+                                <c:RRIcon iconName="{!icon.Name}"/>
+                            </div>
+                        </td>
+                        <td style="width: 30%">
+                            <lightning:input label="" name="{!icon.label__c}" value="{!icon.Label__c}"/>
+                        </td>
+                        <td>
+                            <lightning:input label="" name="{!icon.description__c}" value="{!icon.Description__c}"/>
+                        </td>
+                    </tr>
+                </aura:iteration>
+            </c:RRTable>
+            <c:RRTable>
+                <tr>
+                    <th>Icon</th>
+                    <th class="priority">Icon Label</th>
+                    <th class="completed-by">Description</th>
+                </tr>
+                <aura:iteration items="{!v.customIconDetails}" var="icon">
+                    <tr>
+                        <td>
+                            <div class="icon-title">
+                                <c:RRIcon iconName="{!icon.Name}"/>
+                            </div>
+                        </td>
+                        <td style="width: 30%">
+                            <lightning:input label="" name="{!icon.label__c}" value="{!icon.Label__c}"/>
+                        </td>
+                        <td>
+                            <lightning:input label="" name="{!icon.description__c}" value="{!icon.Description__c}"/>
+                        </td>
+                    </tr>
+                </aura:iteration>
+            </c:RRTable>
+        </aura:if>
+
         <aura:set attribute="footer">
             <lightning:button variant="neutral" type="button" name="close" label="close"
                               onclick="{!c.closeModal}"/>
-            <lightning:button variant="brand" type="button" name="save" label="Save"
-                              onclick="{!c.submitForm}"/>
+            <aura:if isTrue="{!empty(v.detailIcons)==false}">
+                <lightning:button variant="brand" type="button" name="save" label="Save"
+                                  onclick="{!c.saveIconsLegend}"/>
+            </aura:if>
         </aura:set>
     </c:CustomModal>
 </aura:component>
