--- a/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
+++ b/force-app/main/default/aura/AddPatientByPI/AddPatientByPI.cmp
@@ -19,6 +19,7 @@
     <aura:attribute name="isAllRequiredCompleted" type="Boolean" default="false"/>
     <aura:attribute name="screeningRequired" type="Boolean" default="false"/>
     <aura:attribute name="initialized" type="Boolean" default="false"/>
+    <aura:attribute name="isEditMode" type="Boolean" default="false"/>
 
     <!-- handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -33,14 +34,15 @@
 
     <!-- component body: -->
     <c:RRSpinner aura:id="spinner" fixed="true" size="medium" showSpinner="true"/>
-    <c:RRTopBar backLabel="{!$Label.c.PG_TOP_Bar_Back_To_My_Referrals}"
-                backPage="{!'study-workspace?tab=tab-referrals&amp;id=' + v.ctp.Id}"
-                smallTitle="{!v.ctp.Study_Code_Name__c}"
-                bigTitle="{!$Label.c.PG_Add_Patient_Header}">
-    </c:RRTopBar>
-    <c:RRActionApprove aura:id="actionApprove" message="{!$Label.c.Poput_ICF}"
-                       approveBtnName="{!$Label.c.BTN_Confirm}"/>
-
+    <aura:if isTrue="{!!v.isEditMode}">
+        <c:RRTopBar backLabel="{!$Label.c.PG_TOP_Bar_Back_To_My_Referrals}"
+                    backPage="{!'study-workspace?tab=tab-referrals&amp;id=' + v.ctp.Id}"
+                    smallTitle="{!v.ctp.Study_Code_Name__c}"
+                    bigTitle="{!$Label.c.PG_Add_Patient_Header}">
+        </c:RRTopBar>
+        <c:RRActionApprove aura:id="actionApprove" message="{!$Label.c.Poput_ICF}"
+                           approveBtnName="{!$Label.c.BTN_Confirm}"/>
+    </aura:if>
     <aura:if isTrue="{!v.initialized}">
         <div class="rr-width-limiter side-padding">
             <div class="ap-top-info">{! '* ' +  $Label.c.PG_AP_T_Indicate_Req_Fields}</div>
@@ -133,6 +135,7 @@
                         </div>
                     </div>
                 </div>
+                <aura:if isTrue="{!!v.isEditMode}">
                 <div class="ap-section">
                     <div class="ap-section-title">{!$Label.c.PG_AP_H_Referral_Information}</div>
                     <div class="slds-grid slds-gutters slds-wrap">
@@ -163,6 +166,7 @@
                         </div>
                     </div>
                 </div>
+                </aura:if>
             </div>
             <div class="ap-bottom-info">
                <!-- {!$Label.c.PG_AL_Bottom_Signature}&nbsp;
@@ -170,19 +174,22 @@
                 &nbsp;{!$Label.c.PG_AL_Bottom_Signature_End} -->
                 {!$Label.c.PG_AP_T_Sub_Info}
             </div>
-            <div class="ap-buttons">
-                <button class="apollo-btn secondary custom-cancel"
-                        onclick="{!c.doCancel}">{!$Label.c.BTN_Cancel}</button>
-                <button class="apollo-btn tertiary" disabled="{!!v.isAllRequiredCompleted}"
-                        onclick="{!c.doSaveAndNew}">{!$Label.c.BTN_Send_and_Add_Another}</button>
-                <button class="apollo-btn primary" disabled="{!!v.isAllRequiredCompleted}"
-                        onclick="{!c.doSaveAndExit}">{!$Label.c.BTN_Save_and_Exit}</button>
+            <aura:if isTrue="{!!v.isEditMode}">
+                <div class="ap-buttons">
+                    <button class="apollo-btn secondary custom-cancel"
+                            onclick="{!c.doCancel}">{!$Label.c.BTN_Cancel}</button>
+                    <button class="apollo-btn tertiary" disabled="{!!v.isAllRequiredCompleted}"
+                            onclick="{!c.doSaveAndNew}">{!$Label.c.BTN_Send_and_Add_Another}</button>
+                    <button class="apollo-btn primary" disabled="{!!v.isAllRequiredCompleted}"
+                            onclick="{!c.doSaveAndExit}">{!$Label.c.BTN_Save_and_Exit}</button>
+                </div>
+            </aura:if>
+        </div>
+        <aura:if isTrue="{!!v.isEditMode}">
+            <div class="rr-width-limiter side-padding">
+                <c:CommunityFooter/>
             </div>
-        </div>
-
-        <div class="rr-width-limiter side-padding">
-            <c:CommunityFooter/>
-        </div>
+        </aura:if>
     </aura:if>
 
 </aura:component>
