--- a/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
+++ b/force-app/main/default/aura/ReferralProfile/ReferralProfile.cmp
@@ -15,6 +15,8 @@
     <aura:attribute name="showStepSpinner" type="Boolean" default="false"/>
     <aura:attribute name="multiMode" type="Boolean"/>
     <aura:attribute name="currentScreeningId" type="String" access="private"/>
+    <aura:attribute name="participantRecord" type="Participant__c" />
+    <aura:attribute name="isShowPopup" type="Boolean" default="false" />
 
     <!-- handlers: -->
     <aura:handler event="c:EventCommunityInitialized" action="{!c.doInit}"/>
@@ -92,6 +94,9 @@
                                     <div class="value">{!v.enrollment.Participant__r.Mailing_State__c}</div>
                                 </div>
                             </aura:if>
+                            <div class="rr-output-field" style="float:right">
+                                   <lightning:button onclick="{!c.openPopup}">Edit Referral Details</lightning:button> 
+                            </div>
                         </div>
                     </div>
 
@@ -112,8 +117,16 @@
                             <button class="apollo-btn tertiary rp-save-btn" onclick="{!c.saveScreeningId}"
                                     disabled="{!v.enrollment.Screening_ID__c == v.currentScreeningId}">{!$Label.c.BTN_Save}</button>
                         </div>
-                        <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_3-of-12 rp-please-contact">
+                       <!--<div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_3-of-12 rp-please-contact">
                             {!$Label.c.PG_RP_L_Information_incorrect + ' '}<c:RRLink page="help?tab=problem" class="text">{!$Label.c.PG_AS_T2_Link_Contact_IQVIA}</c:RRLink>.
+                        </div> -->
+                        <div class="rr-form-element slds-col slds-size_1-of-1 slds-medium-size_3-of-12 rp-please-contact">
+                            <c:Popup aura:id="popup" title="Edit Patient Information" showModal="{!v.isShowPopup}" size="small">
+                                <c:AddPatientByPI isEditMode="true" participant="{!v.participantRecord}"/>
+                                <aura:set attribute="footerButtons">
+                                    <button class="apollo-btn primary" onclick="{!c.updateParticipant}">Save Changes</button>
+                                </aura:set>
+                            </c:Popup>
                         </div>
                     </div>
 
